Remove extra line.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "# Techniques of High Performance Computing: First Assignment\n",
     "### Jan Zmazek, Scientific Computing\n",
+    "\n",
     "This Python package imports a triangular grid from a legacy vtk file, or creates a square grid with $m\\cdot n$ nodes, and solves a diffusion equation\n",
     "$$\\begin{cases}\n",
     "-\\nabla\\cdot\\sigma(r)\\nabla u(r)=f(r) & \\text{in } \\Omega\\\\\n",
@@ -168,17 +169,10 @@
     "- integration.py: 10/10\n",
     "\n",
     "My efforts to make code as fast as possible were:\n",
-    "- using as many numpy functions as possible, as they are optimised,"
+    "- using as many numpy functions as possible, as they are optimised,\n",
+    "- writing efficient functions,\n",
+    "- avoiding python loops,..."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
